5.0a2 -> 5.0a3:
    - jbj: add "struct utimbuf" and "struct utsname" to eliminate perl wanings.
    - jbj: adjust includes throughout.
    - jbj: move popt.h from rpmlib.h to rpmcli.h, most routines don't need.
    - jbj: don't include rpmcb.h from rpmlib.h, explcit includes instead.
    - jbj: update Doxyfile.
    - jbj: rename rpmmessages.h -> rpmcb.h consistent with callback content.
    - jbj: doScript: use pid_t, not int.
    - jbj: eliminate rpmerr.h, use rpmlog.h instead.
    - jbj: eliminate rpmMessage and RPMMESS_FOO constants, use rpmlog instead.

5.0a1 -> 5.0a2:
    - jbj: fix: don't add RPMTAG_ARCH to pubkeys, pubkeys cannot be erased.
    - afb: make devtool %standalone include the required %{_rpmhome}/magic.
    - jbj: fix: handle absolute paths to spec files again.
    - jbj: fix: don't attempt header sanity checks on pubkeys.
    - jbj: fix: don't loop on failed lookup by instance.
    - jbj: Eliminate SUPPORT_RPMV3_PROVIDE_SELF Provies: N = E:V-R retrofit.
    - jbj: Eliminate SUPPORT_RPMV3_BASENAMES_HACKS file path conversions.
    - jbj: Eliminate SUPPORT_RPMV3_VERIFY_{RSA,DSA} header+payload signatures.
    - jbj: Eliminate SUPPORT_RPMV3_SIGN_{RSA,DSA} header+payload signatures.
    - jbj: Eliminate SUPPORT_PGP_SIGNING signing with pgp/pgp5 code.
    - jbj: Eliminate SUPPORT_RPMV3_BORKEN busted md5 digest tag code.
    - jbj: revert the noisy tag data type validation. explicit typing for 5.0.
    - jbj: add HEADERFLAG_SIGNATURE, revert he->signature access markers.
    - afb: upgrade internal rsyncable zlib, from 1.2.2.4 to 1.2.3
    - jbj: fix: segfault with corrupted rpm reported at http://qa.mandriva.com/show_bug.cgi?id=33735
    - jbj: handle --root/--dbpath variants, with/without URL, using --rebuilddb.
    - jbj: rpmdb: casts for integral conversions.
    - jbj: lib: identify and repair several minor flaws caught by splint.
    - jbj: rpmio: casts for integral conversions.
    - jbj: rpmio: casts for character <-> integral conversions.