@@ -725,7 +725,7 @@ static inline const char *rcsid(const char *p) { \
 #include <search.h>
 #endif
 
-#define	SUPPORT_RPMLEAD		1	/* XXX default is add lead. */
+#define	SUPPORT_RPMLEAD		0	/* XXX default is add lead. */
 
 /**
  * Mark --initdb and --verifydb for destruction.
